# NNCat_Pers

./: .gitignore
env-floquet/: main.py  pyproject.toml
env-modern/: 09_Mpemba_durg.ipynb  main.py  params.json  pyproject.toml
env-modern/WP1_Notebooks/: 01_Cavity_Transmon_Behaviour_Check.ipynb  02_Rabi_Reset_Checks.ipynb  03_Adiabetic_Checks.ipynb  03_Checking_for_Steady_States.ipynb
env-modern/notebooks/: 01_Dynamiqs_test.ipynb  02_Cavity_Qubit_Resonator.ipynb  03_Rabi_Reset_Simulation.ipynb  04_two_dissipative_cavity.ipynb  05_Single_and_double_cavity.ipynb  06_Rotating_Frame_Hamiltonian_Test.ipynb  07_Rigorous_Steady_States.ipynb  08_Finding_Resonense.ipynb  11_Backup.ipynb  plotplot.ipynb
