[project]
name = "env-floquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cycler>=0.12.1",
    "floquet",
    "jax>=0.9.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "qutip>=5.2.3",
    "scipy<1.13.1",
    "scqubits>=4.3.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
floquet = { git = "https://github.com/dkweiss31/floquet.git" }
