[project]
name = "env-modern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dynamiqs>=0.3.4",
    "ipykernel>=7.2.0",
    "jax>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "qutip>=5.2.3",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
